tdf#102010 Never overwrite MM files via UNO

Fixes the regression introduced by
  commit e637b6743a506ef74c93ccbe15ab6642f3baa34f

This commit removed the crazy bSubjectIsFilename handling,
where I didn't understood the case of bSubjectIsFilename
and a user supplied prefix.

Mail merge to files never overwrites an existing document,
but there is the special case, when a user selects a target
filename in the MM dialog for single file MM.

Should be fixed by a successive commmit, reverting this and
removing an existing file before starting the MM job.

(cherry picked from commit bbf246e40c7814bfc4038d456d388d1f90048287)
Reviewed-on: https://gerrit.libreoffice.org/31207
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 5b4b60b2d81452c79ece99c51f63199b7dcf4b1d)

This commit also includes:

MM allow easier manipulation of MM test arguments

Keep the beans::NamedValue vector around and convert it to a
uno::Sequence just before executing the mail merge job.

(cherry picked from commit 660159a68acd54a8f213920457c1aeed79cffea5)
Reviewed-on: https://gerrit.libreoffice.org/31206
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit fda376a5ebf765789cfa4cb81ee04e0f1dafe44b)

Change-Id: Idda487023e6984de9c1e701fc088a6b7f92e9847
Reviewed-on: https://gerrit.libreoffice.org/31636
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>