sw/source/uibase/dbui/dbmgr.cxx
@@ -1100,11 +1100,13 @@ bool SwDBManager::MergeMailFiles(SwWrtShell* pSourceShell,
     bool bCheckSingleFile_ = rMergeDescriptor.bCreateSingleFile;
     if( bMT_EMAIL )
     {
+        assert( !rMergeDescriptor.bPrefixIsFilename );
         assert( bMT_EMAIL && !bCheckSingleFile_ );
         bCheckSingleFile_ = false;
     }
     else if( bMT_SHELL || bMT_PRINTER )
     {
+        assert( !rMergeDescriptor.bPrefixIsFilename );
         assert( (bMT_SHELL || bMT_PRINTER) && bCheckSingleFile_ );
         bCheckSingleFile_ = true;
     }
@@ -1292,7 +1294,7 @@ bool SwDBManager::MergeMailFiles(SwWrtShell* pSourceShell,
     {
         nStartRow = pImpl->pMergeData ? pImpl->pMergeData->xResultSet->getRow() : 0;
 
-        OUString sPath = rMergeDescriptor.sPath;
+        OUString sPrefix = rMergeDescriptor.sPrefix;
         OUString sColumnData;
 
         // Read the indicated data column, which should contain a valid mail
@@ -1304,14 +1306,14 @@ bool SwDBManager::MergeMailFiles(SwWrtShell* pSourceShell,
             {
                 if (sColumnData.isEmpty())
                     sColumnData = "_";
-                sPath += sColumnData;
+                sPrefix += sColumnData;
             }
         }
 
         // create a new temporary file name - only done once in case of bCreateSingleFile
         if( bNeedsTempFiles && ( !bWorkDocInitialized || !bCreateSingleFile ))
         {
-            INetURLObject aEntry(sPath);
+            INetURLObject aEntry(sPrefix);
             OUString sLeading;
             //#i97667# if the name is from a database field then it will be used _as is_
             if( !sColumnData.isEmpty() )
@@ -1319,9 +1321,9 @@ bool SwDBManager::MergeMailFiles(SwWrtShell* pSourceShell,
             else
                 sLeading = aEntry.GetBase();
             aEntry.removeSegment();
-            sPath = aEntry.GetMainURL( INetURLObject::NO_DECODE );
+            sPrefix = aEntry.GetMainURL( INetURLObject::NO_DECODE );
             OUString sExt(comphelper::string::stripStart(pStoreToFilter->GetDefaultExtension(), '*'));
-            aTempFile.reset( new utl::TempFile(sLeading, true, &sExt, &sPath) );
+            aTempFile.reset( new utl::TempFile(sLeading, true, &sExt, &sPrefix) );
             if( !aTempFile->IsValid() )
             {
                 ErrorHandler::HandleError( ERRCODE_IO_NOTSUPPORTED );
@@ -1538,11 +1540,11 @@ bool SwDBManager::MergeMailFiles(SwWrtShell* pSourceShell,
             // save merged document
             assert( aTempFile.get() );
             INetURLObject aTempFileURL;
-            if( rMergeDescriptor.sPath.isEmpty() )
+            if( rMergeDescriptor.sPrefix.isEmpty() || !rMergeDescriptor.bPrefixIsFilename )
                 aTempFileURL.SetURL( aTempFile->GetURL() );
             else
             {
-                aTempFileURL.SetURL( rMergeDescriptor.sPath );
+                aTempFileURL.SetURL( rMergeDescriptor.sPrefix );
                 // remove the unneeded temporary file
                 aTempFile->EnableKillingFile();
             }
@@ -2840,7 +2842,8 @@ void SwDBManager::ExecuteFormLetter( SwWrtShell& rSh,
         SwMergeDescriptor aMergeDesc( pImpl->pMergeDialog->GetMergeType(), rSh, aDescriptor );
         aMergeDesc.sSaveToFilter = pImpl->pMergeDialog->GetSaveFilter();
         aMergeDesc.bCreateSingleFile = pImpl->pMergeDialog->IsSaveSingleDoc();
-        aMergeDesc.sPath = pImpl->pMergeDialog->GetTargetURL();
+        aMergeDesc.bPrefixIsFilename = aMergeDesc.bCreateSingleFile;
+        aMergeDesc.sPrefix = pImpl->pMergeDialog->GetTargetURL();
         if( !aMergeDesc.bCreateSingleFile && pImpl->pMergeDialog->IsGenerateFromDataBase() )
         {
             aMergeDesc.sDBcolumn = pImpl->pMergeDialog->GetColumnName();
